samples/_failures_safe/1761128748_613a0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de0a9d5f.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_de0a9d5f.c:143: error: expected ‘{’ at end of input
